--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: prfalipingh
 Type: Package
-Title: What the Package Does (Title Case)
+Title: ggplot the correlation in offence_count between two suburbs
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: It take the user's inputs, which include a datatable, offence discription
+    and two character element vector. Based on the inputs, it plots the correlation in 
+    offence count between the two input suburbs from the datatable.
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
