--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: The package maintainer <yourself@somewhere.net>
 Description: It take the user's inputs, which include a datatable, offence discription
     and two character element vector. Based on the inputs, it plots the correlation in 
     offence count between the two input suburbs from the datatable.
-License: MIT
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
