--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,13 @@ Package: prfalipingh
 Type: Package
 Title: ggplot the correlation in offence_count between two suburbs
 Version: 0.1.0
-Authors@R: person("Liping", "Huang", email = "lipingh@andrew.cmu.edu",
-                  role = c("aut", "cre"))
+Authors: Liping Huang
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: It take the user's inputs, which include a datatable, offence discription
     and two character element vector. Based on the inputs, it plots the correlation in 
     offence count between the two input suburbs from the datatable.
-License: file LICENSE
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: testthat
+Imports: data.table
